--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pelican-site/plugins/pelican-md-metayaml"]
 	path = pelican-site/plugins/pelican-md-metayaml
 	url = git@github.com:algrant/pelican-md-metayaml.git
+[submodule "pelican-site/themes/medius"]
+	path = pelican-site/themes/medius
+	url = git@github.com:algrant/medius.git
